--- a/Sharpener's_Tasks/three_hours_project_in_JS/style.css
+++ b/Sharpener's_Tasks/three_hours_project_in_JS/style.css
@@ -1,10 +1,14 @@
 .container{
     border: solid 2px greenyellow;
-    background: black;
+    background: rgb(75, 72, 72);
     width: 50%;
     margin: auto;
     
     color:azure
+}
+#inputForm{
+    background-color: antiquewhite;
+    color: rgb(100, 100, 225);
 }
 
 h2{
@@ -36,7 +40,7 @@ h2{
 
 #btn{
     width: 100%;
-    height: 1.5em;
+    height: 2.5em;
     margin-top: 5%;
     margin-bottom: 0;
     background-color: aqua;
@@ -48,4 +52,10 @@ input{
 
 select{
     font-size: 1.5em;
+}
+#show__details{
+    font-size: 1em;
+    color: rgb(127, 21, 203);
+    margin-top: 10%;
+    background-color: rgb(224, 237, 233);
 }
