stack and queue from basic

--- a/Sharpener's_Tasks/three_hours_project_in_JS/style.css
+++ b/Sharpener's_Tasks/three_hours_project_in_JS/style.css
@@ -28,7 +28,7 @@ h2{
     width:10%;
     font-weight: bolder;
     font-size: 1.2em;
-    background-color: yellow;
+    background-color: rgb(157, 157, 4);
 }
 
 .li_items{
