--- a/Sharpener's_Tasks/Expense_tracker_three_hours_project_in_JS/style.css
+++ b/Sharpener's_Tasks/Expense_tracker_three_hours_project_in_JS/style.css
@@ -38,7 +38,7 @@ h2{
     
 }
 
-#btn{
+#submitbtn{
     width: 100%;
     height: 2.5em;
     margin-top: 5%;
@@ -58,4 +58,13 @@ select{
     color: rgb(127, 21, 203);
     margin-top: 10%;
     background-color: rgb(224, 237, 233);
+}
+
+#updatebtn{
+    display: none;
+    width: 100%;
+    height: 2.5em;
+    margin-top: 5%;
+    margin-bottom: 0;
+    background-color:greenyellow;
 }
