--- a/Sharpener's_Tasks/async_Expense_tracker/public/css/main.css
+++ b/Sharpener's_Tasks/async_Expense_tracker/public/css/main.css
@@ -1,8 +1,22 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+#header{
+    height: 5rem;
+    background: black;
+}
+nav{
+    display: flex;
+    align-items: center;
+    align-self: center;
+}
 .container{
     border: solid 2px greenyellow;
     background: rgb(75, 72, 72);
-    width: 50%;
+    width: 30%;
     margin: auto;
+    margin-top: 2rem;
     
     color:azure
 }
@@ -47,11 +61,11 @@ h2{
 }
 
 input{
-    font-size: 1em;
+    font-size: 0.8em;
 }
 
 select{
-    font-size: 1.5em;
+    font-size: 1em;
 }
 #show__details{
     font-size: 1em;
